fixed footer not sticking correctly

--- a/styles.css
+++ b/styles.css
@@ -3,17 +3,17 @@
     margin: 0;
     padding: 10px 20px;
 }
-
+html, body {
+    height: 100%;
+}
 html, body, main{
     margin: 0;
     padding: 0;
-    height: 100%;
     font-family: Arial, Helvetica, sans-serif;
 }
 body {
     display: flex;
     flex-direction: column;
-    flex: 1 1 0px;
 }
 
 header {
@@ -22,7 +22,6 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex: 1 1 0px;
 }
 header p {
     color:#f9faf8;
@@ -39,7 +38,7 @@ ul li {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex: 1 1 0px;
+    flex: .75;
 }
 #intro-image {
     height: 300px;
@@ -49,7 +48,7 @@ ul li {
 .main-content {
     background-color: white;
     text-align: center;
-    flex: 1 1 0px;
+    flex: 1;
 }
 #content-list {
     display: flex;
@@ -65,8 +64,10 @@ ul li {
 }
 .quote-space {
     background-color: #e5e7eb;
-    flex: 1 1 0px;
-    padding: 50px 20px;
+    flex: .5;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 .quote {
     color: #1f2937;
@@ -82,14 +83,16 @@ ul li {
 .sign-up {
     background-color: white;
     padding: 25px 20px;
-    flex: 1 1 0px;
+    flex: .5;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 .sign-up-box {
     background-color: #3882f6;
     border-radius: 5px;
     display: flex;
     justify-content: space-evenly;
-    flex: 1 1 0px;
     color: white;
     padding: 25px 20px;
 }
@@ -105,8 +108,12 @@ footer {
     color: #e5e7eb;
     text-align: center;
     padding: 5px 20px;
-    flex: 1 1 0px;
 }
 a:visited {
     color: #e5e7eb;
+}
+main {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
 }
